# ext/hivemq-edge-openapi-2024.8-SNAPSHOT.yaml
@@ -5285,15 +5285,19 @@ components:
       - source
     FieldMappingModel:
       type: object
+      description: Defines how incoming data should be transformed before being sent
+        out.
       properties:
-        destination:
-          type: string
-          description: The field name in the outgoing data
-        source:
-          type: string
-          description: The field name in the incoming data.
-        transformation:
-          $ref: '#/components/schemas/TransformationModel'
+        instructions:
+          type: array
+          description: List of instructions to be applied to incoming data
+          items:
+            $ref: '#/components/schemas/InstructionModel'
+        metadata:
+          $ref: '#/components/schemas/MetadataModel'
+      required:
+      - instructions
+      - metadata
     FieldMappingsListModel:
       type: object
       properties:
@@ -5362,6 +5366,8 @@ components:
       type: object
       description: List of result items that are returned by this endpoint
       properties:
+        fieldMapping:
+          $ref: '#/components/schemas/FieldMappingModel'
         includeTagNames:
           type: boolean
           description: Should tag names be included when sent out.
@@ -5372,6 +5378,10 @@ components:
           type: integer
           format: int32
           description: The maximum MQTT-QoS for the outgoing messages.
+        messageExpiryInterval:
+          type: integer
+          format: int64
+          description: The message expiry interval.
         messageHandlingOptions:
           type: string
           description: How collected tags should or shouldnÖT be aggregated.
@@ -5393,6 +5403,7 @@ components:
       - includeTagNames
       - includeTimestamp
       - maxQoS
+      - messageExpiryInterval
       - messageHandlingOptions
       - tagName
       - topic
@@ -5499,6 +5510,23 @@ components:
           description: The workCell
           nullable: true
           pattern: "^[a-zA-Z0-9 -_]*$"
+    InstructionModel:
+      type: object
+      description: List of instructions to be applied to incoming data
+      properties:
+        destinationFieldName:
+          type: string
+          description: The field in the output object where the data will be written
+            to
+        sourceFieldName:
+          type: string
+          description: The field in the input object where the data will be read from
+        transformation:
+          $ref: '#/components/schemas/TransformationModel'
+      required:
+      - destinationFieldName
+      - sourceFieldName
+      - transformation
     JsonNode:
       type: object
       description: The arguments of the fsm derived from the behavior policy.
@@ -5642,6 +5670,17 @@ components:
       - destination
       - filters
       - maxQoS
+    MetadataModel:
+      type: object
+      description: Metadata for the whole mapping
+      properties:
+        destinationJsonSchema:
+          $ref: '#/components/schemas/JsonNode'
+        sourceJsonSchema:
+          $ref: '#/components/schemas/JsonNode'
+      required:
+      - destinationJsonSchema
+      - sourceJsonSchema
     Metric:
       type: object
       description: List of result items that are returned by this endpoint
@@ -6178,6 +6217,8 @@ components:
       type: object
       description: List of result items that are returned by this endpoint
       properties:
+        fieldMapping:
+          $ref: '#/components/schemas/FieldMappingModel'
         maxQoS:
           type: integer
           format: int32
@@ -6217,7 +6258,7 @@ components:
       - items
     TransformationModel:
       type: object
-      description: The kind of transformation that is performed on the data
+      description: The transformation to be applied between mapping the fields
     TypeIdentifier:
       type: object
       description: The unique id of the event object
